env/code_53e5943856eec/stderr.txt
  File "main.py", line 5
    print os.exec(ls)
                ^
SyntaxError: invalid syntax
